# omr-backend

./: Dockerfile  api.py  cert.pem  key.pem  pyproject.toml  requirements.txt
base/: config.json  template.json
samples/sample1/: template.json
src/: constants.py  entry.py  evaluation.py
src/processors/: FeatureBasedAlignment.py
src/utils/: image.py  interaction.py  validations.py
