[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | _build
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py37']

[tool.poetry]
name = "omrchecker"
version = "0.1.0"
description = ""
authors = ["Vitor Daniel <vitor036daniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pandas = "^2.2.1"
rich = "^13.7.1"
deepmerge = "^1.1.1"
dotmap = "^1.3.30"
jsonschema = "^4.21.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
screeninfo = "^0.8.1"
python-multipart = "^0.0.9"
msgspec = "^0.18.6"
aiofiles = "^23.2.1"
aiomysql = "^0.2.0"
brotli-asgi = "^1.4.0"
aioshutil = "^1.3"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
gunicorn = "^21.2.0"
opencv-python = "^4.9.0.80"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
freezegun = "^1.4.0"
pre-commit = "^3.6.2"
pytest-mock = "^3.12.0"
pytest = "^8.0.2"
syrupy = "^4.6.1"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
